Update manual.md